stylus-proc/tests/fail/public/constructor.stderr
error: function can be only one of fallback, receive or constructor
  --> tests/fail/public/constructor.rs:16:5
   |
16 |     fn init() {}
   |     ^^

error: fallback, receive, and constructor can't have custom selector
  --> tests/fail/public/constructor.rs:21:5
   |
21 |     fn constr() {}
   |     ^^

error: constructor function can only be defined using the corresponding attribute
  --> tests/fail/public/constructor.rs:24:5
   |
24 |     fn constructor() {}
   |     ^^

error: constructor function can only be defined using the corresponding attribute
  --> tests/fail/public/constructor.rs:28:5
   |
28 |     fn constructor() {}
   |     ^^

error: constructor function can only be defined using the corresponding attribute
  --> tests/fail/public/constructor.rs:31:5
   |
31 |     fn stylus_constructor() {}
   |     ^^

error: constructor function can only be defined using the corresponding attribute
  --> tests/fail/public/constructor.rs:35:5
   |
35 |     fn foo() {}
   |     ^^
